Internalizacion-Aplicacion de lenguaje en varios templates

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -15,34 +15,34 @@
         <div class="container-lg">
             <div class="p-5 mb-4 bg-body-tertiary rounded-3">
                 <div class="container-fluid py-5">
-                    <h1 class="display-5 fw-bold">Impulsa tu Negocio con Nuestra Plataforma Innovadora</h1>
-                    <p class="col-md-8 fs-4">Descubre cómo nuestra tecnología puede transformar tus operaciones y aumentar tu productividad.</p>
-                    <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'">Comienza Ahora</button>
+                   <h1 class="display-5 fw-bold"> <!-- Impulsa tu Negocio con Nuestra Plataforma Innovadora--> [[#{banner.msg1}]]</h1>
+                    <p class="col-md-8 fs-4"> <!-- Descubre cómo nuestra tecnología puede transformar tus operaciones y aumentar tu productividad.--> [[#{banner.msg2}]]</p>
+                    <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'"> <!-- Comienza Ahora--> [[#{banner.boton}]]</button>
                 </div>
             </div>
         </div>
         <div class="container-lg">
             <div class="row align-items-md-stretch">
-                <h1 class="display-5 fw-bold">Beneficios Principales</h1>
+                <h1 class="display-5 fw-bold"><!-- Beneficios Principales--> [[#{banner.beneficios}]]</h1>
                 <div class="col-md-6">
                     <div class="h-100 p-5 text-bg-dark rounded-3">
-                        <h2>Ahorro de Tiempo</h2>
-                        <p>Automatiza tus procesos y gana más tiempo para lo que realmente importa.</p>
+                        <h2><!-- Ahorro de Tiempo--> [[#{banner.ahorro}]]</h2>
+                        <p><!--Automatiza tus procesos y gana más tiempo para lo que realmente importa.-->[[#{banner.msg3}]]</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="h-100 p-5 text-bg-dark rounded-3">
-                        <h2>Incremento de Eficiencia</h2>
-                        <p>Optimiza tus operaciones con nuestras herramientas avanzadas.</p>
+                        <h2><!--Incremento de Eficiencia -->[[#{banner.msg4}]]</h2>
+                        <p><!--Optimiza tus operaciones con nuestras herramientas avanzadas.--> [[#{banner.msg5}]]</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="h-100 p-5 text-bg-dark rounded-3">
-                        <h2>Soporte 24/7</h2>
-                        <p>Nuestro equipo de soporte está disponible todo el día para ayudarte.</p>
+                        <h2><!--Soporte 24/7 --> [[#{banner.msg6}]]</h2>
+                        <p><!--Nuestro equipo de soporte está disponible todo el día para ayudarte. --> [[#{banner.msg7}]]</p>
                     </div>
                 </div>
-                <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'">Ver planes</button>
+                <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'"><!--Ver planes --> [[#{banner.planes}]]</button>
             </div>
         </div>
         <div class="container-lg">
