--- a/src/main/resources/templates/layout/Plantilla.html
+++ b/src/main/resources/templates/layout/Plantilla.html
@@ -18,9 +18,9 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Home</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/planes">Planes</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login">Iniciar Sesion</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/"> <!--Home--> [[#{plantilla.principal}]]</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/planes"> <!--Planes--> [[#{plantilla.planes}]]</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login"> <!--Iniciar Sesion--> [[#{plantilla.login}]]</a>
                 </nav>
             </div>
         </header>
