--- a/src/main/resources/templates/asistencia/estudiantes.html
+++ b/src/main/resources/templates/asistencia/estudiantes.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
     <head th:replace="~{layout/plantilla2 :: head}">
-        <title>Pasar Asistencia</title>
+        <title><!--Tomar Asistencia--> [[#{curso.titulo3}]]</title>
     </head>
 
     <script>
@@ -25,14 +25,14 @@
         <section class="container py-4">
             <div class="card">
                 <div class="card-header">
-                    <h4>Pasar Asistencia para Curso: <span th:text="${cursoNombre}"></span></h4>
+                    <h4><!--Pasar Asistencia para Curso:--> [[#{curso.titulo4}]] <span th:text="${cursoNombre}"></span></h4>
                     <p th:text="'Número de estudiantes: ' + ${#lists.size(estudiantes)}"></p>
                 </div>
                 <div class="container py-4">
                     <div class="row">
                         <div class="col-md-3 d-grid">
                             <a th:href="@{/asistencia/curso}" class="btn btn-primary">
-                                <i class="fas fa-arrow-left"></i> Regresar
+                                <i class="fas fa-arrow-left"></i> <!--Regresar -->[[#{accion.regresar}]]
                             </a>
                         </div>
                         <div class="card-body">
@@ -40,14 +40,14 @@
                                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                                 <input type="hidden" name="cursoId" th:value="${cursoId}" />
                                 <div class="form-group">
-                                    <label for="fecha">Fecha</label>
+                                    <label for="fecha"><!--Fecha--> [[#{fecha}]]</label>
                                     <input type="date" id="fecha" name="fecha" class="form-control" required/>
                                 </div>
                                 <table class="table table-striped">
                                     <thead>
                                         <tr>
-                                            <th>Nombre</th>
-                                            <th>Asistió</th>
+                                            <th><!--Nombre--> [[#{usuario.nombre}]]</th>
+                                            <th><!--Asistió -->[[#{accion.asistir}]]</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -58,12 +58,12 @@
                                             </td>
                                             <td class="checkbox-cell">
                                                 <input type="checkbox" th:name="'asistio' + ${estudiante.matriculas[0].id}" />
-                                                <label class="checkbox-label">Asistió</label>
+                                                <label class="checkbox-label"><!--Asistió--> [[#{accion.asistir}]]</label>
                                             </td>
                                         </tr>
                                     </tbody>
                                 </table>
-                                <button type="submit" class="btn btn-primary">Registrar Asistencia</button>
+                                <button type="submit" class="btn btn-primary"><!--Registrar Asistencia--> [[#{asistencia.boton]]</button>
                             </form>
                         </div>
                     </div>
@@ -72,80 +72,3 @@
         </section>
     </body>
 </html>
-
-<!--<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head>
-        <title>Pasar Asistencia</title>
-        <head th:replace="~{layout/plantilla2 :: head}">
-        </head>
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                // Obtén la fecha actual
-                const today = new Date();
-
-                // Formatea la fecha en 'YYYY-MM-DD' para el valor del input
-                const formattedDate = today.toISOString().split('T')[0];
-
-                // Asigna la fecha formateada al campo de fecha
-                document.getElementById('fecha').value = formattedDate;
-            });
-        </script>
-        <body>
-            <header th:replace="layout/plantilla2 :: header"></header>
-            <section class="container py-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Pasar Asistencia para Curso: <span th:text="${cursoNombre}"></span> 
-                            <p th:text="'Número de estudiantes: ' + ${#lists.size(estudiantes)}"></p>
-                        </h4>
-                    </div>
-                    <div class="container py-4">
-                        <div class="row">
-                            <div class="col-md-3 d-grid">
-                                <a th:href="@{/asitencia/curso}" class="btn btn-primary">
-                                    <i class="fas fa-arrow-left"></i> Regresar
-                                </a>
-                            </div>
-                            <div class="card-body">
-                                <form th:action="/asistencia/registrar" method="post">
-                                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                                    <input type="hidden" name="cursoId" th:value="${cursoId}" />
-                                    <div class="form-group">
-                                        <label for="fecha">Fecha</label>
-                                        <input type="date" id="fecha" name="fecha" class="form-control" required/>
-                                    </div>
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th>Nombre</th>
-                                                <th>Asistió</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <div th:each="estudiante, iter : ${estudiantes}">
-                                                <input type="hidden" name="matriculaId" th:value="${estudiante.matriculas[0].id}" />
-                                                <tr>
-                                                    <td>
-                                                        <label th:text="${estudiante.persona.nombre} + ' ' + ${estudiante.persona.apellido1}" ></label>
-                                                        <label th:text="${estudiante.persona.apellido2}"></label>
-                                                    </td>
-                                                    <td class="checkbox-cell">
-                                                        <input type="checkbox" th:name="'asistio' + ${estudiante.matriculas[0].id}" />
-                                                        <label class="checkbox-label">Asistió</label>
-                                                    </td>
-                                                </tr>
-                                            </div>
-                                        </tbody>
-                                    </table>
-                                    <button type="submit" class="btn btn-primary">Registrar Asistencia</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </body>
-</html>-->
